fix(error-view): attempt to fix background-color on safari

--- a/src/admin/menu/views/MenuDetail.scss
+++ b/src/admin/menu/views/MenuDetail.scss
@@ -8,7 +8,7 @@
 		transition: background 500ms ease-in-out;
 
 		&.c-menu-detail__table-row--active {
-			background: $color-gray-100;
+			background-color: $color-gray-100;
 		}
 	}
 
