--- a/src/shared/components/Footer/Footer.scss
+++ b/src/shared/components/Footer/Footer.scss
@@ -41,7 +41,7 @@
 
 		&:hover,
 		&:focus {
-			background: transparent;
+			background-color: transparent;
 			color: $color-gray-500;
 		}
 	}
