--- a/src/styles/components/_label.scss
+++ b/src/styles/components/_label.scss
@@ -88,41 +88,41 @@
 ========================================================================== */
 
 .c-label-swatch--color-1 {
-	background: $color-wine-red;
+	background-color: $color-wine-red;
 }
 
 .c-label-swatch--color-2 {
-	background: $color-ocean-green;
+	background-color: $color-ocean-green;
 }
 
 .c-label-swatch--color-3 {
-	background: $color-tapestry;
+	background-color: $color-tapestry;
 }
 
 .c-label-swatch--color-4 {
-	background: $color-green;
+	background-color: $color-green;
 }
 
 .c-label-swatch--color-5 {
-	background: $color-yellow;
+	background-color: $color-yellow;
 }
 
 .c-label-swatch--color-6 {
-	background: $color-dark-orange;
+	background-color: $color-dark-orange;
 }
 
 .c-label-swatch--color-7 {
-	background: $color-silver;
+	background-color: $color-silver;
 }
 
 .c-label-swatch--color-8 {
-	background: $color-night-blue;
+	background-color: $color-night-blue;
 }
 
 .c-label-swatch--color-9 {
-	background: $color-soft-blue;
+	background-color: $color-soft-blue;
 }
 
 .c-label-swatch--color-10 {
-	background: $color-french-rose;
+	background-color: $color-french-rose;
 }
