--- a/src/styles/components/_oauth-buttons.scss
+++ b/src/styles/components/_oauth-buttons.scss
@@ -22,7 +22,7 @@
 	&.c-button-smartschool:hover,
 	&.c-button-smartschool:active,
 	&.c-button-smartschool:visited {
-		background: $color-smartschool;
+		background-color: $color-smartschool;
 		border-color: $color-smartschool;
 	}
 
@@ -36,7 +36,7 @@
 	&.c-button-klascement:hover,
 	&.c-button-klascement:active,
 	&.c-button-klascement:visited {
-		background: $color-klascement;
+		background-color: $color-klascement;
 		border-color: $color-klascement;
 	}
 
