--- a/src/styles/components/_projects-grid.scss
+++ b/src/styles/components/_projects-grid.scss
@@ -48,7 +48,7 @@
 	right: 0;
 	padding: 1.2rem 2.4rem;
 	color: #fff;
-	background: rgba($color-gray-700, 0.7);
+	background-color: rgba($color-gray-700, 0.7);
 }
 
 .c-projects-grid-item__title {
